# energi_data_api

./: Makefile  README.md  environment.yml  pyproject.toml  test.py
energi_data_api/: __init__.py  energi_data_service.py
energi_data_api/utils/: genericapi.py  utils.py  wrappers.py
src/: utils.py  wrappers.py
src/energi_data_apis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/energidataservice/: __init__.py  day_ahead_prices.py  energidataserviceapi.py
